--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation "org.liquibase:liquibase-core"
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
 
+    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.10.0'
 
+    implementation 'com.auth0:java-jwt:3.8.3'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
