--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   liquibase:
     contexts: default
@@ -27,3 +26,13 @@ spring:
         enable_lazy_load_no_trans: true
     hibernate:
       ddl-auto: none
+graphql:
+  servlet:
+    mapping: /graphql
+    enabled: true
+    corsEnabled: false
+    exception-handlers-enabled: true
+    contextSetting: PER_REQUEST_WITH_INSTRUMENTATION
+blog:
+  passwordStrength : 10
+  tokenSecret : NfECoU9_)icgPDx
