--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     implementation "org.liquibase:liquibase-core"
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
 
-    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.10.0'
+    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:7.0.1'
+    runtimeOnly 'com.graphql-java-kickstart:altair-spring-boot-starter:7.0.1'
 
     implementation 'com.auth0:java-jwt:3.8.3'
 
